...
                        style: GoogleFonts.inter(
                            color: Colors.white38, fontSize: 14),
                      ),
                      GestureDetector(
                        onTap: () => context.push('/role-selection'),
                        child: const Text(
                          'Create one',
                          style: TextStyle(
                            color: Colors.white,
                            fontWeight: FontWeight.w800,
                            fontSize: 14,
                          ),
                        ),
...
